--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
     <link rel="stylesheet" href="./style/stylehome.css">
 </head>
 <body>
-    <div class="title">
-        <h1>WaveAction</h1>
-        <p>A aventura de viver, é ser livre.</p>
-        <nav id="menu">
+    <header id="header" class="title-containerFlex">
+        <div class="title-container">
+        <h1>LoremIpsum</h1>
+        </div>
+
+        <div class="paragraph-container">
+            <p>Lorem ipsum, dolor sit amet consectetur</p>
+        </div>
+    </header>
+        <nav class="menu">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="produtos.html">Produtos</a></li>
@@ -22,10 +28,10 @@
                 <li><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
-    </div>
+    
 
     <div class="video">
-        <h2 id="second_title">WaveAction é isso!</h2>
+        <p class="para">Lorem ipsum, dolor sit</p>
         <iframe width="854" height="480" src="https://www.youtube.com/embed/GiG3hSJEGi4?start=15" 
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
         allowfullscreen></iframe>
